fixed scroll X issues for news page, and added html overflow hidden in globals

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,11 @@
 
 }
 
+html {
+  overflow-x: hidden;
+  overflow-y: hidden;
+} /* Prevents scrolling for X*/
+
 /* Font-face definitions */
 @font-face {
   font-family: 'PPMori';
@@ -257,7 +262,7 @@ h5 {
   height: 100vh;
   padding: 20px;
   background-color: var(--black);
-  overflow-y: auto;
+  /* overflow-y: auto; */
 }
 
 .homeLayout {
